# AIRFLOW-vfedorenko

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
airflow/: .gitignore  airflow.cfg  unittests.cfg
airflow/dags/: jobs_dag.py  trigger_dag.py
dags/: jobs_dag.py  trigger_dag.py
plugins/: postgres_count_rows.py
