[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Vadim Fedorenko <meiblorn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
apache-airflow = "^1.10"
cryptography = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
